// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mark /> should adopt color and bgColor props 1`] = `
.jgvsMJ {
  color: tomato;
  background-color: purple;
  padding: 1px 2px 2px;
  border-radius: 2px;
}

<Mark
  bgColor="purple"
  color="tomato"
>
  <styled.mark
    bgColor="purple"
    color="tomato"
  >
    <mark
      className="sc-bdVaJa jgvsMJ"
      color="tomato"
    >
      Mark me!
    </mark>
  </styled.mark>
</Mark>
`;

exports[`<Mark /> should match baseline snapshot with defaultProps 1`] = `
.ihauwQ {
  color: inherit;
  background-color: rgba(48,192,249,0.8);
  padding: 1px 2px 2px;
  border-radius: 2px;
}

<Mark
  bgColor="rgba(48,192,249,0.8)"
  color="inherit"
>
  <styled.mark
    bgColor="rgba(48,192,249,0.8)"
    color="inherit"
  >
    <mark
      className="sc-bdVaJa ihauwQ"
      color="inherit"
    >
      Mark me!
    </mark>
  </styled.mark>
</Mark>
`;
